Add support to svnserve to run as a native Windows service.  This allows svnserve to start automatically, at system boot time, without having a user logged in and without the need for an external service 'wrapper' program.
Patch by: Arlie Davis <adavis@stonestreetone.com>
          me

* subversion/svnserve/main.c (main): Updated to support running as a
   Windows service. Adds new --service run mode.

* subversion/svnserve/winservice.h: New.
   Contains public declarations for service support.

* subversion/svnserve/winservice.c: New.
   Contains implementation of service support.

* notes/windows-service.txt: New.
   Contains notes on how to use service support (install, start, stop,
   uninstall).

* build.conf (svnserve): Add dependency on ws2_32.lib for Windows.

--- a/build.conf
+++ b/build.conf
@@ -292,6 +292,7 @@ install = bin
 manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
        aprutil apriconv apr
+msvc-libs = ws2_32.lib
 
 [svnversion]
 description = Subversion Revision Extractor
