Follow-up to r18602: fix cmdline client dependency.
* build.conf (svn): Add libsvn_diff to depending library list.

Approved by: lundblad

--- a/build.conf
+++ b/build.conf
@@ -113,7 +113,7 @@ swig-checkout-files = common.swg swigrun.swg runtime.swg
 description = Subversion Client
 type = exe
 path = subversion/svn
-libs = libsvn_client libsvn_wc libsvn_ra libsvn_delta libsvn_subr
+libs = libsvn_client libsvn_wc libsvn_ra libsvn_delta libsvn_diff libsvn_subr
        aprutil apriconv apr neon keychain
 manpages = subversion/svn/svn.1
 install = bin
