--- a/build.conf
+++ b/build.conf
@@ -41,6 +41,7 @@ private-built-includes =
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_NodeKind.h
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_NotifyAction.h
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_NotifyStatus.h
+        subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_Path.h
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_PromptUserPassword2.h
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_Revision.h
         subversion/bindings/java/javahl/include/org_tigris_subversion_javahl_RevisionKind.h
