Make configure handle new (and future) APR/APR-UTIL versions by passing a list of space-separated regexes to their respective macros.
* configure.in:
  Update acceptable version regexes for APR and APR-UTIL.

* build/ac-macros/aprutil.m4 (SVN_LIB_APRUTIL),
* build/ac-macros/apr.m4 (SVN_LIB_APR):
  Loop through all acceptable version regexes, looking for a match.

--- a/configure.in
+++ b/configure.in
@@ -51,13 +51,12 @@ dnl The specific reasons we require APR 0.9.5-final are:
 dnl   - APR_LARGEFILE added
 dnl   - APR_GSETID added
 dnl   - bug in apr_temp_dir_get() fixed
-APR_VER_REGEX=["0\.9\.[5-9]"]
-APR_VER_REGEX_TOO="1\."
-APU_VER_REGEX=["0\.9\.[5-9]"]
-APU_VER_REGEX_TOO="1\."
 
-SVN_LIB_APR($APR_VER_REGEX, $APR_VER_REGEX_TOO)
-SVN_LIB_APRUTIL($APU_VER_REGEX, $APU_VER_REGEX_TOO)
+APR_VER_REGEXES=["0\.9\.[5-9] 0.9.1[0-9] 1."]
+APU_VER_REGEXES=["0\.9\.[5-9] 0.9.1[0-9] 1."]
+
+SVN_LIB_APR($APR_VER_REGEXES)
+SVN_LIB_APRUTIL($APU_VER_REGEXES)
 
 # Either a space-separated list of allowable Neon versions, or "any" to
 # mean allow anything.
