Add zlib to dependency list of libsvn_delta, since we require it for svndiff1.
* build.conf
  (libsvn_delta): Add a dependancy on zlib.

--- a/build.conf
+++ b/build.conf
@@ -161,7 +161,7 @@ msvc-static = yes
 type = lib
 install = fsmod-lib
 path = subversion/libsvn_delta
-libs = libsvn_subr aprutil apriconv apr
+libs = libsvn_subr aprutil apriconv apr zlib
 msvc-static = yes
 
 # Routines for diffing
