* build.conf   (test-scripts): Add authz_tests.py.
Suggested by: Lieven Govaerts <lgo@mobsol.be>

--- a/build.conf
+++ b/build.conf
@@ -86,6 +86,7 @@ test-scripts =
         subversion/tests/cmdline/cat_tests.py
         subversion/tests/cmdline/import_tests.py
         subversion/tests/cmdline/svnsync_tests.py
+        subversion/tests/cmdline/authz_tests.py
 
 bdb-test-scripts =
 
