Change the string property value for the svn:executable from '' to '*' to match the svn comand line value when an executable file is added.
* contrib/client-side/svn_load_dirs.pl.in:
  Set the svn:executable property value '*' instead of ''.

--- a/contrib/client-side/svn_load_dirs.pl.in
+++ b/contrib/client-side/svn_load_dirs.pl.in
@@ -998,8 +998,8 @@ while (defined (my $load_dir = &get_next_load_dir))
         if ($source_is_exe)
           {
             print "Adding to '$source_path' property 'svn:executable' with ",
-                  "value ''.\n";
-            my $property = {name => 'svn:executable', value => ''};
+                  "value '*'.\n";
+            my $property = {name => 'svn:executable', value => '*'};
             push (@{$add_files{$source_path}{properties}},
                   $property);
           }
