Add configury for OpenSSL detection.
Patch by: Sigfred Håversen <bsdlist@mumak.com>
(Tweaked by me.)

* Makefile.in
  (SVN_SSL_LIBS): New autoconf-provided macro.
  (INCLUDES): Updated to include SVN_SSL_INCLUDES, an autoconf-provided
  macro.
* build.conf
  ([svn], [svnserve]): Add dependant library "ssl".
  ([ssl]): New library definition.
* configure.in: Add call to SVN_LIB_SSL.
* build/ac-macros/ssl.m4: New file.
* aclocal.m4: Include build/ac-macros/ssl.m4.

--- a/build.conf
+++ b/build.conf
@@ -116,7 +116,7 @@ description = Subversion Client
 type = exe
 path = subversion/svn
 libs = libsvn_client libsvn_wc libsvn_ra libsvn_delta libsvn_diff libsvn_subr
-       aprutil apriconv apr neon keychain
+       aprutil apriconv apr neon keychain ssl
 manpages = subversion/svn/svn.1
 install = bin
 
@@ -293,7 +293,7 @@ path = subversion/svnserve
 install = bin
 manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
-       aprutil apriconv apr
+       aprutil apriconv apr ssl
 msvc-libs = ws2_32.lib
 
 [svnversion]
@@ -840,6 +840,10 @@ libs = libsvn_ra_dav libsvn_ra_local libsvn_ra_svn
 type = lib
 external-lib = $(SVN_FS_LIB_LINK)
 libs = libsvn_fs_base libsvn_fs_fs
+
+[ssl]
+type = lib
+external-lib = $(SVN_SSL_LIBS)
 
 [__ALL__]
 type = project
