Implement generation of project files for building Serf on Windows.
NOTE: This doesn't add option to link Subversion with Serf
on Windows. It is only add ability to build ra_serf. Option
to enable Subversion use ra_serf will be committed later.

* build.conf
  (serf): Rename external project to be serf instead of libserf,
  since we use static linking on Windows.

* build/generator/gen_vcnet_vcproj.py
* build/generator/gen_msvc_dsp.py
  (write): Write serf project file too.

* build/generator/gen_win.py
  (parse_options): Parse new option '--with-serf'.
  (get_external_project): Change location of serf project,
  if serf path is specified.
  (get_win_includes): Add serf path to includes list.
  (write_serf_project_file): New method for generation serf project
  file.

* build/generator/serf.dsp.ezt
* build/generator/serf.vcproj.ezt
  New templates for serf project files.
  
* gen-make.py
  Add new option '--with-serf' to usage text and options list.

--- a/build.conf
+++ b/build.conf
@@ -816,7 +816,7 @@ external-lib = $(SVN_KEYCHAIN_LIBS)
 [serf]
 type = lib
 external-lib = $(SVN_SERF_LIBS)
-external-project = serf/libserf
+external-project = serf/serf
 libs = apr aprutil xml
 msvc-static = yes
 
